import com.install4j.gradle.Install4jTask

plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
    id 'org.beryx.jlink' version '2.10.3'
    id 'edu.sc.seis.launch4j' version '2.4.6'
    id 'edu.sc.seis.macAppBundle' version '2.3.0'
    id "com.install4j.gradle" version "7.0.11"
}

group 'com.wexalian'
version '0.0.0.1'

sourceCompatibility = 1.12

macAppBundle.mainClassName = mainClassName = "$moduleName/com.wexalian.showme.Main"

applicationDefaultJvmArgs = ["--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix", "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix"]

repositories {
    mavenCentral()
    maven {
        url 'https://maven.ej-technologies.com/repository'
    }
}

dependencies {
    compile 'com.jfoenix:jfoenix:9.0.8'
}

javafx {
    version = "12"
    modules = ['javafx.controls', 'javafx.fxml']

}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'ShowMe'
        jvmArgs = applicationDefaultJvmArgs
    }
    jpackage {
        jpackageHome = 'C:/Program Files/Java/jdk-13'
        installerOptions = ['--win-per-user-install', '--win-dir-chooser']
    }
}


launch4j {
    mainClassName = 'com.wexalian.showme.Main'
    downloadUrl = ''
    jvmOptions.addAll(applicationDefaultJvmArgs)
    headerType = "gui"
    jreMinVersion = "1.11"
//    bundledJrePath = 'jre'
}

jar {
    manifest {
        attributes(
                'Main-Class': "com.wexalian.showme.Main",
                'JavaFX-Application-Class': "com.wexalian.showme.Main",
                'Automatic-Module-Name': "showme"
//                'JavaFX-Preloader-Class': "com.wexalian.showme.PreLoader",
        )
    }
}

task genExe(type: Install4jTask) {
    dependsOn 'launch4j'
    projectFile = file('setup.install4j')
    install4j {
        installDir = file('C:/Program Files/install4j7')
    }
}
